Added multiple launchers 1. AppsListingActivity1 for devices >= Android 8 2. AppsListingActivity2 for devices < Android 8 Reason:- Android 8.0 broadcast cannot receive Background execution not allowed-PACKAGE_ADDED, this phenomenon has been confirmed

--- a/LauncherSdk/build.gradle
+++ b/LauncherSdk/build.gradle
@@ -44,4 +44,5 @@ dependencies {
   implementation "com.google.dagger:hilt-android:$HILT"
   kapt "com.google.dagger:hilt-android-compiler:$HILT"
   implementation "androidx.localbroadcastmanager:localbroadcastmanager:$LOCAL_BROADCAST"
+  implementation "androidx.lifecycle:lifecycle-runtime-ktx:$LIFECYCLE"
 }
