--- a/LauncherSdk/src/main/AndroidManifest.xml
+++ b/LauncherSdk/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
   <application>
     <receiver android:name=".AppStatusReceiver">
       <intent-filter>
-        <action android:name="android.intent.action.PACKAGE_REMOVED" />
+        <action android:name="android.intent.action.PACKAGE_FULLY_REMOVED" />
         <action android:name="android.intent.action.PACKAGE_ADDED" />
 
         <data android:scheme="package" />
